--- a/ait-news/views/comments.hbs
+++ b/ait-news/views/comments.hbs
@@ -4,7 +4,7 @@
 <h2>
   Comments:
 </h2><br>
-
+<link rel="stylesheet" href="{{css_file}}">
 <ul>
 {{#each link.comments as |comment|}}
 <li> <i>{{comment.user}} says </i><br>
